feat(change): osm-change-xml interpretation endpoint (#94)
* feat(change): osm xml change interpretation endpoint

* ci(configurations): helm lint fix

* fix(change): osmId interpretation as number

* feat(change): added entity type to interpreted mapping
